--- a/.gitignore
+++ b/.gitignore
@@ -165,12 +165,8 @@ cython_debug/
 #.idea/
 
 ### VisualStudioCode ###
+.vscode
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
 
 # Local History for Visual Studio Code
 .history/
